Replace emptySet