@@ -11,7 +11,6 @@ package us.fatehi.utility;
 import static us.fatehi.utility.Utility.isBlank;
 import static us.fatehi.utility.Utility.trimToEmpty;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
@@ -100,7 +99,7 @@ public final class TemplatingUtility {
   public static Set<String> extractTemplateVariables(final String template) {
 
     if (isBlank(template)) {
-      return Collections.emptySet();
+      return Set.of();
     }
 
     String shrunkTemplate = template;
